fix broken spacing at top

--- a/src/styles/Game.scss
+++ b/src/styles/Game.scss
@@ -2,7 +2,10 @@
 
   // Menu element
   &_menu {
-    
+
+    h3 {
+      margin: 0;
+    }
   }
 
   // Board element
